fix: fix viewport height on mobile

--- a/frontend/app/styles/main.scss
+++ b/frontend/app/styles/main.scss
@@ -86,7 +86,7 @@ header {
 }
 
 // Main banner style
-.banner {
+#banner {
   height: calc(100vh - 60px);
   background-image: url("../images/mainbanner1500x1000px.jpg");
   background-color: $color-grey;
